# MLfastGRF

./: CMakeLists.txt  README.md  readme.md
genericMLMC_v1.1.0/: .gitignore
genericMLMC_v1.1.0/include/genericMLMC/: Level.hpp  auxiliary.hpp  genericMLMC.hpp
genericMLMC_v1.1.0/include/genericMLMC/tools/: can_call.hpp  parallel.hpp  vector_ops.hpp
results/beta_0.75/: plot_square.py  square_L2L2_error_10_10.txt  square_L2L2_error_2000_2000.txt  square_L2L2_error_20_200.txt  square_L2L2_error_20_2000.txt  square_dimFEspace.txt
results/beta_1.50/: plot_square_polygon.py  polygon_L2L2_error_10_10.txt  polygon_dimFEspace.txt  square_L2L2_error_10_10.txt  square_dimFEspace.txt
results/cpu_time/: plot_cpu_time.py  square_cpu_time.txt
results/sqrt_err/: plot_sqrt_err.py  sqrt_err_4.txt  sqrt_err_7.txt
source/: bpx_preconditioner.hpp  compute_fastGRF_cpu_time.cpp  compute_sqrtM_err.cpp  lambda_min_max_SPD.hpp  main_fastGRF_L2L2_error.cpp  main_fastGRF_cpu_time.cpp  main_sqrtM.cpp  parametric_integrand_bpx_cg_L2L2_error.hpp  polygon.msh  precomputation.cpp  sampler.hpp  simple_functions.hpp  sqrt_matrix.hpp  square.msh
